variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: type mismatch;
 found   : Unit
 required: Int
  avance{}
        ^